--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.profiles.active=local
+
+
+# developing: create-drop, update
+# Distributing: validate
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# SQL logging
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
