--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@yaireo/tagify": "^4.7.1",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jdenticon": "^3.1.1",
