--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@yaireo/tagify": "^4.7.1",
     "bootstrap": "^4.6.0",
+    "cropper": "^4.1.0",
     "font-awesome": "^4.7.0",
     "jdenticon": "^3.1.1",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "jquery-cropper": "^1.0.1"
   },
   "devDependencies": {},
   "description": ""
