--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    implementation 'org.modelmapper:modelmapper:2.4.4'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
     // npm
     implementation 'com.github.node-gradle:gradle-node-plugin:3.1.0'
+
+    implementation 'org.springframework.security:spring-security-test'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -39,7 +42,6 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 
