--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -15,6 +15,7 @@
     "jdenticon": "^3.1.1",
     "jquery": "^3.6.0",
     "jquery-cropper": "^1.0.1",
+    "tempusdominus-bootstrap-4": "^5.39.0",
     "timepicki": "^2.0.1"
   },
   "devDependencies": {},
